# recipro

./: .gitignore  README.md  config.yaml  pyproject.toml  run.py
recipro/: __init__.py  __main__.py  ambient.py  cli.py  config.py  models.py  prompts.py  reporting.py  state.py  utils.py
recipro/agents/: __init__.py  claude.py  codex.py
recipro/backends/: __init__.py  base.py  claude.py  codex.py
recipro/core/: git_tools.py  orchestrator.py
tests/: test_config.py  test_models.py  test_prompts.py  test_utils.py
